--- a/photouploader/en.lproj/MainMenu.xib
+++ b/photouploader/en.lproj/MainMenu.xib
@@ -1394,18 +1394,18 @@
 								<int key="NSPeriodicInterval">25</int>
 							</object>
 						</object>
-						<object class="NSSplitView" id="190609967">
+						<object class="NSSplitView" id="388865953">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">274</int>
 							<object class="NSMutableArray" key="NSSubviews">
 								<bool key="EncodedWithXMLCoder">YES</bool>
 								<object class="IKImageView" id="71755143">
-									<reference key="NSNextResponder" ref="190609967"/>
+									<reference key="NSNextResponder" ref="388865953"/>
 									<int key="NSvFlags">274</int>
 									<string key="NSFrameSize">{960, 342}</string>
-									<reference key="NSSuperview" ref="190609967"/>
+									<reference key="NSSuperview" ref="388865953"/>
 									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView" ref="668312976"/>
+									<reference key="NSNextKeyView" ref="105286022"/>
 									<bool key="NSViewIsLayerTreeHost">YES</bool>
 									<float key="zoomFactor">0.21375000476837158</float>
 									<float key="rotationAngle">0.0</float>
@@ -1422,18 +1422,18 @@
 										<bytes key="NSRGB">MC41MDAwMjI4OSAwLjUwMDAyMjg5IDAuNTAwMDIyODkAA</bytes>
 									</object>
 								</object>
-								<object class="NSScrollView" id="668312976">
-									<reference key="NSNextResponder" ref="190609967"/>
+								<object class="NSScrollView" id="105286022">
+									<reference key="NSNextResponder" ref="388865953"/>
 									<int key="NSvFlags">268</int>
 									<object class="NSMutableArray" key="NSSubviews">
 										<bool key="EncodedWithXMLCoder">YES</bool>
-										<object class="NSClipView" id="801355099">
-											<reference key="NSNextResponder" ref="668312976"/>
+										<object class="NSClipView" id="723771244">
+											<reference key="NSNextResponder" ref="105286022"/>
 											<int key="NSvFlags">2304</int>
 											<object class="NSMutableArray" key="NSSubviews">
 												<bool key="EncodedWithXMLCoder">YES</bool>
 												<object class="IKImageBrowserView" id="541804875">
-													<reference key="NSNextResponder" ref="801355099"/>
+													<reference key="NSNextResponder" ref="723771244"/>
 													<int key="NSvFlags">18</int>
 													<object class="NSMutableSet" key="NSDragTypes">
 														<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1593,9 +1593,9 @@
 														</object>
 													</object>
 													<string key="NSFrameSize">{943, 960}</string>
-													<reference key="NSSuperview" ref="801355099"/>
+													<reference key="NSSuperview" ref="723771244"/>
 													<reference key="NSWindow"/>
-													<reference key="NSNextKeyView" ref="54012925"/>
+													<reference key="NSNextKeyView" ref="40325725"/>
 													<bool key="constrainsToOriginalSize">NO</bool>
 													<bool key="cellsHaveSubtitle">NO</bool>
 													<bool key="cellsHaveTitle">NO</bool>
@@ -1612,7 +1612,7 @@
 											</object>
 											<string key="NSFrame">{{1, 1}, {943, 284}}</string>
 											<string key="NSBounds">{{0, 676}, {943, 284}}</string>
-											<reference key="NSSuperview" ref="668312976"/>
+											<reference key="NSSuperview" ref="105286022"/>
 											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="541804875"/>
 											<reference key="NSDocView" ref="541804875"/>
@@ -1627,39 +1627,39 @@
 											</object>
 											<int key="NScvFlags">6</int>
 										</object>
-										<object class="NSScroller" id="54012925">
-											<reference key="NSNextResponder" ref="668312976"/>
+										<object class="NSScroller" id="40325725">
+											<reference key="NSNextResponder" ref="105286022"/>
 											<int key="NSvFlags">256</int>
 											<string key="NSFrame">{{944, 1}, {15, 284}}</string>
-											<reference key="NSSuperview" ref="668312976"/>
+											<reference key="NSSuperview" ref="105286022"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="701691244"/>
+											<reference key="NSNextKeyView" ref="874895696"/>
 											<bool key="NSEnabled">YES</bool>
-											<reference key="NSTarget" ref="668312976"/>
+											<reference key="NSTarget" ref="105286022"/>
 											<string key="NSAction">_doScroller:</string>
 											<double key="NSPercent">0.29583333333333334</double>
 										</object>
-										<object class="NSScroller" id="701691244">
-											<reference key="NSNextResponder" ref="668312976"/>
+										<object class="NSScroller" id="1032749497">
+											<reference key="NSNextResponder" ref="105286022"/>
 											<int key="NSvFlags">-2147483392</int>
 											<string key="NSFrame">{{-100, -100}, {943, 15}}</string>
-											<reference key="NSSuperview" ref="668312976"/>
+											<reference key="NSSuperview" ref="105286022"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="874895696"/>
+											<reference key="NSNextKeyView" ref="723771244"/>
 											<int key="NSsFlags">1</int>
-											<reference key="NSTarget" ref="668312976"/>
+											<reference key="NSTarget" ref="105286022"/>
 											<string key="NSAction">_doScroller:</string>
 											<double key="NSPercent">0.50602412223815918</double>
 										</object>
 									</object>
 									<string key="NSFrame">{{0, 352}, {960, 286}}</string>
-									<reference key="NSSuperview" ref="190609967"/>
+									<reference key="NSSuperview" ref="388865953"/>
 									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView" ref="801355099"/>
+									<reference key="NSNextKeyView" ref="1032749497"/>
 									<int key="NSsFlags">82</int>
-									<reference key="NSVScroller" ref="54012925"/>
-									<reference key="NSHScroller" ref="701691244"/>
-									<reference key="NSContentView" ref="801355099"/>
+									<reference key="NSVScroller" ref="40325725"/>
+									<reference key="NSHScroller" ref="1032749497"/>
+									<reference key="NSContentView" ref="723771244"/>
 									<bytes key="NSScrollAmts">QSAAAEEgAABC/AAAQvAAAA</bytes>
 								</object>
 							</object>
@@ -1673,7 +1673,7 @@
 					<string key="NSFrame">{{7, 11}, {930, 680}}</string>
 					<reference key="NSSuperview"/>
 					<reference key="NSWindow"/>
-					<reference key="NSNextKeyView" ref="190609967"/>
+					<reference key="NSNextKeyView" ref="388865953"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
 				<string key="NSMaxSize">{1e+13, 1e+13}</string>
@@ -2427,6 +2427,14 @@
 					</object>
 					<int key="connectionID">582</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">imageBrowser</string>
+						<reference key="source" ref="71755143"/>
+						<reference key="destination" ref="541804875"/>
+					</object>
+					<int key="connectionID">588</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -2984,7 +2992,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="339532013"/>
 							<reference ref="874895696"/>
-							<reference ref="190609967"/>
+							<reference ref="388865953"/>
 						</object>
 						<reference key="parent" ref="972006081"/>
 					</object>
@@ -3509,44 +3517,44 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">587</int>
-						<reference key="object" ref="190609967"/>
+						<reference key="object" ref="388865953"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="71755143"/>
-							<reference ref="668312976"/>
+							<reference ref="105286022"/>
 						</object>
 						<reference key="parent" ref="439893737"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">564</int>
 						<reference key="object" ref="71755143"/>
-						<reference key="parent" ref="190609967"/>
+						<reference key="parent" ref="388865953"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">583</int>
-						<reference key="object" ref="668312976"/>
+						<reference key="object" ref="105286022"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="541804875"/>
-							<reference ref="701691244"/>
-							<reference ref="54012925"/>
+							<reference ref="1032749497"/>
+							<reference ref="40325725"/>
 						</object>
-						<reference key="parent" ref="190609967"/>
+						<reference key="parent" ref="388865953"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">557</int>
 						<reference key="object" ref="541804875"/>
-						<reference key="parent" ref="668312976"/>
+						<reference key="parent" ref="105286022"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">585</int>
-						<reference key="object" ref="701691244"/>
-						<reference key="parent" ref="668312976"/>
+						<reference key="object" ref="1032749497"/>
+						<reference key="parent" ref="105286022"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">584</int>
-						<reference key="object" ref="54012925"/>
-						<reference key="parent" ref="668312976"/>
+						<reference key="object" ref="40325725"/>
+						<reference key="parent" ref="105286022"/>
 					</object>
 				</object>
 			</object>
@@ -3780,6 +3788,7 @@
 					<string>561.IBPluginDependency</string>
 					<string>562.IBPluginDependency</string>
 					<string>563.IBPluginDependency</string>
+					<string>564.CustomClassName</string>
 					<string>564.IBPluginDependency</string>
 					<string>57.IBEditorWindowLastContentRect</string>
 					<string>57.IBPluginDependency</string>
@@ -3788,6 +3797,10 @@
 					<string>575.IBPluginDependency</string>
 					<string>58.IBPluginDependency</string>
 					<string>58.ImportedFromIB2</string>
+					<string>583.IBPluginDependency</string>
+					<string>584.IBPluginDependency</string>
+					<string>585.IBPluginDependency</string>
+					<string>587.IBPluginDependency</string>
 					<string>72.IBPluginDependency</string>
 					<string>72.ImportedFromIB2</string>
 					<string>73.IBPluginDependency</string>
@@ -4043,6 +4056,7 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>ImageViewer</string>
 					<string>com.apple.imagekit.ibplugin</string>
 					<string>{{286, 129}, {275, 183}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -4051,6 +4065,10 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<integer value="1"/>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<integer value="1"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -4091,7 +4109,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">587</int>
+			<int key="maxID">588</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -4212,6 +4230,25 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/IKImageView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ImageViewer</string>
+					<string key="superclassName">IKImageView</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">imageBrowser</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">imageBrowser</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">imageBrowser</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ImageViewer.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
